--- a/puzzle.html
+++ b/puzzle.html
@@ -5,7 +5,7 @@
     </head>
     <body>
 
-    <canvas id="puzzle" width="300" height="300"></canvas>
+    <canvas id="puzzle" width="300" height="300" style="outline:black; outline-style:solid; outline-width:8px; outline-offset:-4px;"></canvas>
     
     <script src="puzzle.js"></script>
     </body>
